--- a/webpage/techcomm-map.html
+++ b/webpage/techcomm-map.html
@@ -101,7 +101,7 @@
       center: {lat: 10.367178, lng: 16.998713},
       zoom: 2
     });
-
+map.data.loadGeoJson('https://gist.githubusercontent.com/cak-opiq/0685cdd71daa2703ae0dc2541fae51b8/raw/12b76420a34aea34917e00cb8fcac776e7f4a1c5/KAL-hopList.json');
     // Insert a script element into the document header, to get
     // the tech comm data from a Google Docs spreadsheet.
     var scriptElement = document.createElement('script');
